DOCS: tutorial de AI.